# AISettings

./: build.gradle  settings.gradle
aisettings/: build.gradle
aisettings/src/main/: AndroidManifest.xml
aisettings/src/main/cpp/: native-lib.cpp
aisettings/src/main/res/animator/: anim_left_in.xml
aisettings/src/main/res/drawable/: box.xml  rectangle.xml  seek_bar_style.xml  selector_fullscreen_and_exit.xml
aisettings/src/main/res/layout/: activity_main.xml  fragment_aisettings.xml  fragment_aisettings_line.xml
aisettings/src/main/res/values/: arrays.xml  colors.xml  strings.xml  styles.xml  themes.xml
aisettings/src/main/res/values-land/: dimens.xml
aisettings/src/main/res/values-night/: themes.xml
aisettings/src/main/res/values-zh-rCN/: arrays.xml  strings.xml
aisettings/src/main/res/values-zh-rCN-land/: dimens.xml
gradle/wrapper/: gradle-wrapper.properties
libffplay/: build.gradle
libffplay/src/main/cpp/: CMakeLists.txt  CallBack.cpp  CallBack.h  FfPlayer.cpp  FfPlayer.h  FfPlayer_jni.cpp  FlyFFmpeg.cpp  FlyFFmpeg.h  FlyLog.h
libijkplayer/: build.gradle
libijkplayer/src/main/: AndroidManifest.xml
libutils/: build.gradle
libzebra/src/main/cpp/: CMakeLists.txt  Fzebra.cpp  Fzebra.h  Fzebra_jni.cpp
libzebra/src/main/cpp/client/: UserSession.cpp  UserSession.h
libzebra/src/main/cpp/media/: AudioDecoder.cpp  AudioDecoder.h  VideoDecoder.cpp  VideoDecoder.h
libzebra/src/main/cpp/service/: ScreenService.cpp
libzebra/src/main/cpp/utils/: ByteUtil.cpp  ByteUtil.h
mdvrset/: build.gradle
mdvrset/src/main/: AndroidManifest.xml
mdvrset/src/main/cpp/: CMakeLists.txt
mdvrset/src/main/res/animator/: anim_right_out.xml
mdvrset/src/main/res/color/: menu_text_color.xml
mdvrset/src/main/res/drawable/: def_button.xml  def_button_bk01.xml  def_button_bk02.xml  float_button.xml  horizon_rectangle.xml  item_rectangle.xml  line_dash.xml  rectangle_message.xml  text_button_01.xml  text_button_02.xml
mdvrset/src/main/res/layout/: activity_adasset.xml  activity_arcsoftset.xml  activity_main.xml  activity_mdvr.xml  activity_option.xml  activity_phone.xml  activity_select.xml  activity_welcom.xml  dialog_adsa_edit.xml  fragment_adasset.xml  fragment_adasset1.xml  (+8 more)
(+116 files in other folders)
